--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./styles/assets.css">
     <link rel="stylesheet" href="./styles/header.css">
     <link rel="stylesheet" href="./styles/footer.css">
+    <link rel="stylesheet" href="./styles/modals.css">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/intro.css">
 </head>
@@ -33,12 +34,20 @@
                     </svg>
                     <span id="btn-volume-tooltip" class="tooltip-text">Sound Off</span>
                 </button>
+                <button id="btn-game-guide" class="btn tooltip" aria-label="help-btn" onclick="showInfoGuide()">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none" viewBox="0 0 256 256">
+                        <path
+                            d="M208,144H136V95.19a40,40,0,1,0-16,0V144H48a16,16,0,0,0-16,16v48a16,16,0,0,0,16,16H208a16,16,0,0,0,16-16V160A16,16,0,0,0,208,144ZM104,56a24,24,0,1,1,24,24A24,24,0,0,1,104,56ZM208,208H48V160H208v48Zm-40-96h32a8,8,0,0,1,0,16H168a8,8,0,0,1,0-16Z">
+                        </path>
+                    </svg>
+                    <span class="tooltip-text">Guide</span>
+                </button>
             </div>
         </div>
     </header>
 
     <main>
-        <div id="intro-container" class="intro-container">
+        <div id="intro-container" class="intro-container fade-in">
             <div class="glitch-headline">
                 <p class="invisible-text">Brizzle Bash</p>
                 <p class="glitch-animation">Brizzle Bash</p>
@@ -72,6 +81,210 @@
         </div>
     </main>
 
+
+    <div id="info-guide-modal" class="modal hidden">
+        <div class="modal-container">
+            <div class="modal-header">
+                <h2 class="modal-headline">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none" viewBox="0 0 256 256">
+                        <path
+                            d="M208,144H136V95.19a40,40,0,1,0-16,0V144H48a16,16,0,0,0-16,16v48a16,16,0,0,0,16,16H208a16,16,0,0,0,16-16V160A16,16,0,0,0,208,144ZM104,56a24,24,0,1,1,24,24A24,24,0,0,1,104,56ZM208,208H48V160H208v48Zm-40-96h32a8,8,0,0,1,0,16H168a8,8,0,0,1,0-16Z">
+                        </path>
+                    </svg>
+                    Game Play
+                </h2>
+                <button class="btn btn-circle" onclick="closeInfoGuide()">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none" viewBox="0 0 256 256">
+                        <path
+                            d="M205.66,194.34a8,8,0,0,1-11.32,11.32L128,139.31,61.66,205.66a8,8,0,0,1-11.32-11.32L116.69,128,50.34,61.66A8,8,0,0,1,61.66,50.34L128,116.69l66.34-66.35a8,8,0,0,1,11.32,11.32L139.31,128Z">
+                        </path>
+                    </svg>
+                </button>
+            </div>
+            <div class="tabs">
+                <button class="btn tab-btn active" onclick="switchTab(event, 'desktop-controls')">
+                    Desktop
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none" viewBox="0 0 256 256">
+                        <path d="M232,128A104,104,0,1,1,128,24,104.13,104.13,0,0,1,232,128Z"></path>
+                    </svg>
+                </button>
+                <button class="btn tab-btn" onclick="switchTab(event, 'mobile-controls')">
+                    Mobile
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none" viewBox="0 0 256 256">
+                        <path d="M232,128A104,104,0,1,1,128,24,104.13,104.13,0,0,1,232,128Z"></path>
+                    </svg>
+                </button>
+                <button class="btn tab-btn" onclick="switchTab(event, 'game-story')">
+                    Characters
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none" viewBox="0 0 256 256">
+                        <path d="M232,128A104,104,0,1,1,128,24,104.13,104.13,0,0,1,232,128Z"></path>
+                    </svg>
+                </button>
+                <div class="tab-content">
+                    <!--  desktop controls -->
+                    <section id="desktop-controls" class="modal-content">
+                        <div class="modal-guide-item">
+                            <h3>Movement</h3>
+                            <div class="kbd-control">
+                                <div class="kbd-control-row">
+                                    <kbd>A</kbd> - <span>Use the A key to move the character to the left.</span>
+                                </div>
+                                <div class="kbd-control-row">
+                                    <kbd>D</kbd> - <span>Use the D key to move the character to the right.</span>
+                                </div>
+                                <div class="kbd-control-row">
+                                    <kbd>W</kbd> - <span>Use the W key to make the character jump.</span>
+                                </div>
+                                <div class="kbd-control-row">
+                                    <kbd>␣</kbd> - <span>Use the space-bar to make the character jump.</span>
+                                </div>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="modal-guide-item">
+                            <h3>Attacks</h3>
+                            <div class="kbd-control">
+                                <div class="kbd-control-row">
+                                    <kbd>J</kbd> - <span>Use the J key to launch a close-range attack.</span>
+                                </div>
+                                <div class="kbd-control-row">
+                                    <kbd>K</kbd> - <span>Use the K key launch a long-range attack.</span>
+                                </div>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="modal-guide-item">
+                            <h3>Collectibles</h3>
+                            <div class="kbd-control">
+                                <div class="kbd-control-row">
+                                    <kbd>
+                                        <svg class="health-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none" viewBox="0 0 256 256">
+                                            <path
+                                                d="M178,40c-20.65,0-38.73,8.88-50,23.89C116.73,48.88,98.65,40,78,40a62.07,62.07,0,0,0-62,62c0,70,103.79,126.66,108.21,129a8,8,0,0,0,7.58,0C136.21,228.66,240,172,240,102A62.07,62.07,0,0,0,178,40ZM128,214.8C109.74,204.16,32,155.69,32,102A46.06,46.06,0,0,1,78,56c19.45,0,35.78,10.36,42.6,27a8,8,0,0,0,14.8,0c6.82-16.67,23.15-27,42.6-27a46.06,46.06,0,0,1,46,46C224,155.61,146.24,204.15,128,214.8Z">
+                                            </path>
+                                        </svg>
+                                    </kbd> - <span>Collect hearts to heal and restore health.</span>
+                                </div>
+                                <div class="kbd-control-row">
+                                    <kbd>
+                                        <svg class="bomb-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none" viewBox="0 0 256 256">
+                                            <path
+                                                d="M248,32h0a8,8,0,0,0-8,8,52.66,52.66,0,0,1-3.57,17.39C232.38,67.22,225.7,72,216,72c-11.06,0-18.85-9.76-29.49-24.65C176,32.66,164.12,16,144,16c-16.39,0-29,8.89-35.43,25a66.07,66.07,0,0,0-3.9,15H88A16,16,0,0,0,72,72v9.59A88,88,0,0,0,112,248h1.59A88,88,0,0,0,152,81.59V72a16,16,0,0,0-16-16H120.88a46.76,46.76,0,0,1,2.69-9.37C127.62,36.78,134.3,32,144,32c11.06,0,18.85,9.76,29.49,24.65C184,71.34,195.88,88,216,88c16.39,0,29-8.89,35.43-25A68.69,68.69,0,0,0,256,40,8,8,0,0,0,248,32ZM140.8,94a72,72,0,1,1-57.6,0A8,8,0,0,0,88,86.66V72h48V86.66A8,8,0,0,0,140.8,94ZM111.89,209.32A8,8,0,0,1,104,216a8.52,8.52,0,0,1-1.33-.11,57.5,57.5,0,0,1-46.57-46.57,8,8,0,1,1,15.78-2.64,41.29,41.29,0,0,0,33.43,33.43A8,8,0,0,1,111.89,209.32Z">
+                                            </path>
+                                        </svg>
+                                    </kbd> - <span>Collect bombs to unleash devastating special attacks.</span>
+                                </div>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="modal-guide-item">
+                            <h3>Utility Keys</h3>
+                            <div class="kbd-control">
+                                <div class="kbd-control-row">
+                                    <kbd>P</kbd> - <span>Use the P key to pause or return to the game.</span>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                    <!-- mobile controls -->
+                    <section id="mobile-controls" class="modal-content hidden">
+                        <div class="modal-guide-item">
+                            <h3>Movement</h3>
+                            <div class="kbd-control">
+                                <div class="kbd-control-row">
+                                    <kbd>
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none" viewBox="0 0 256 256">
+                                            <path d="M168,48V208a8,8,0,0,1-13.66,5.66l-80-80a8,8,0,0,1,0-11.32l80-80A8,8,0,0,1,168,48Z"></path>
+                                        </svg>
+                                    </kbd> -
+                                    <span>To move the character to the left, press the button.</span>
+                                </div>
+                                <div class="kbd-control-row">
+                                    <kbd>
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none" viewBox="0 0 256 256">
+                                            <path d="M181.66,133.66l-80,80A8,8,0,0,1,88,208V48a8,8,0,0,1,13.66-5.66l80,80A8,8,0,0,1,181.66,133.66Z"></path>
+                                        </svg>
+                                    </kbd> -
+                                    <span>To move the character to the right, press the button.</span>
+                                </div>
+                                <div class="kbd-control-row">
+                                    <kbd>J</kbd> - <span>To make the character jump, press the J button.</span>
+                                </div>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="modal-guide-item">
+                            <h3>Attacks</h3>
+                            <div class="kbd-control">
+                                <div class="kbd-control-row">
+                                    <kbd>P</kbd> - <span>To launch a close-range attack, press the P button.</span>
+                                </div>
+                                <div class="kbd-control-row">
+                                    <kbd>T</kbd> - <span>To launch a long-range attack, press the T Button.</span>
+                                </div>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="modal-guide-item">
+                            <h3>Collectibles</h3>
+                            <div class="kbd-control">
+                                <div class="kbd-control-row">
+                                    <kbd>
+                                        <svg class="health-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none" viewBox="0 0 256 256">
+                                            <path
+                                                d="M178,40c-20.65,0-38.73,8.88-50,23.89C116.73,48.88,98.65,40,78,40a62.07,62.07,0,0,0-62,62c0,70,103.79,126.66,108.21,129a8,8,0,0,0,7.58,0C136.21,228.66,240,172,240,102A62.07,62.07,0,0,0,178,40ZM128,214.8C109.74,204.16,32,155.69,32,102A46.06,46.06,0,0,1,78,56c19.45,0,35.78,10.36,42.6,27a8,8,0,0,0,14.8,0c6.82-16.67,23.15-27,42.6-27a46.06,46.06,0,0,1,46,46C224,155.61,146.24,204.15,128,214.8Z">
+                                            </path>
+                                        </svg>
+                                    </kbd> - <span>Collect hearts to heal and restore health.</span>
+                                </div>
+                                <div class="kbd-control-row">
+                                    <kbd>
+                                        <svg class="bomb-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none" viewBox="0 0 256 256">
+                                            <path
+                                                d="M248,32h0a8,8,0,0,0-8,8,52.66,52.66,0,0,1-3.57,17.39C232.38,67.22,225.7,72,216,72c-11.06,0-18.85-9.76-29.49-24.65C176,32.66,164.12,16,144,16c-16.39,0-29,8.89-35.43,25a66.07,66.07,0,0,0-3.9,15H88A16,16,0,0,0,72,72v9.59A88,88,0,0,0,112,248h1.59A88,88,0,0,0,152,81.59V72a16,16,0,0,0-16-16H120.88a46.76,46.76,0,0,1,2.69-9.37C127.62,36.78,134.3,32,144,32c11.06,0,18.85,9.76,29.49,24.65C184,71.34,195.88,88,216,88c16.39,0,29-8.89,35.43-25A68.69,68.69,0,0,0,256,40,8,8,0,0,0,248,32ZM140.8,94a72,72,0,1,1-57.6,0A8,8,0,0,0,88,86.66V72h48V86.66A8,8,0,0,0,140.8,94ZM111.89,209.32A8,8,0,0,1,104,216a8.52,8.52,0,0,1-1.33-.11,57.5,57.5,0,0,1-46.57-46.57,8,8,0,1,1,15.78-2.64,41.29,41.29,0,0,0,33.43,33.43A8,8,0,0,1,111.89,209.32Z">
+                                            </path>
+                                        </svg>
+                                    </kbd> - <span>Collect bombs to unleash devastating special attacks.</span>
+                                </div>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="modal-guide-item">
+                            <h3>Utility Keys</h3>
+                            <div class="kbd-control">
+                                <div class="kbd-control-row">
+                                    <kbd>
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none" viewBox="0 0 256 256">
+                                            <path
+                                                d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216ZM112,96v64a8,8,0,0,1-16,0V96a8,8,0,0,1,16,0Zm48,0v64a8,8,0,0,1-16,0V96a8,8,0,0,1,16,0Z">
+                                            </path>
+                                        </svg>
+                                    </kbd> - <span>Press the button to pause or return to the game.</span>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                    <!--  character carousel -->
+                    <section id="game-story" class="modal-content hidden">
+                        <div class="carousel-container">
+                            <div class="carousel" id="carousel"></div>
+                            <button class="btn carousel-prev" onclick="moveSlide(-1)">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none" viewBox="0 0 256 256">
+                                    <path d="M165.66,202.34a8,8,0,0,1-11.32,11.32l-80-80a8,8,0,0,1,0-11.32l80-80a8,8,0,0,1,11.32,11.32L91.31,128Z"></path>
+                                </svg>
+                            </button>
+                            <button class="btn carousel-next" onclick="moveSlide(1)">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none" viewBox="0 0 256 256">
+                                    <path d="M181.66,133.66l-80,80a8,8,0,0,1-11.32-11.32L164.69,128,90.34,53.66a8,8,0,0,1,11.32-11.32l80,80A8,8,0,0,1,181.66,133.66Z"></path>
+                                </svg>
+                            </button>
+                        </div>
+                    </section>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <footer>
         <div class="footer-inner">
             <div class="footer-main">
@@ -79,6 +292,11 @@
                     <img class="footer-logo" src="./assets/img/main/logo.png" alt="Logo">
                     <span class="logo-txt">Brizzle Bash</span>
                 </div>
+            </div>
+            <div class="imprint">
+                <a href="">Impress</a>
+                <span>/</span>
+                <a href="">Privacy</a>                
             </div>
             <figcaption class="made-with-section">
                 <span>made with</span>
@@ -93,9 +311,9 @@
     </footer>
 
     <script src="./js/intro.js"></script>
-    <script src="./js/audio.js"></script>
     <script src="./js/carousel.js"></script>
-
+    <script src="./js/modals.js"></script>
+    <script src="./js/audio.js"></script>
 
 </body>
 
